Required auth scope, myczqo bug fix, dark mode fixes

--- a/public/css/czqomd.css
+++ b/public/css/czqomd.css
@@ -523,8 +523,10 @@ body[data-theme="dark"] .list-group-item.bg-czqo-blue-light {
 }
 
 .toastify {
-    border-radius: 0.6em !important;
+    border-radius: 0em !important;
     font-size: 1.2em;
+    font-weight: 700;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12)!important;
 }
 
 .toastify .toast-close {
@@ -576,6 +578,6 @@ body[data-theme="dark"] .text-body {
     color: var(--czqo-blue) !important;
 }
 
-body[data-theme="dark"]#czqoHeaderLight.navbar-light .nav-item:not(#accountDropdown) > .nav-link {
+body[data-theme="dark"] #czqoHeaderLight.navbar-light .nav-item:not(#accountDropdown) > .nav-link {
     color: #fff;
 }
